blog/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: estbndlt/moderation
          # steps to run
          # - update code
          # - build the docker image with latest tag in service directory
          #   (default if not specified with estbndlt/moderation:latest)
          #   - command: `docker build -t estbndlt/moderation .`
          # - push image to docker hub in service directory
          #   - command: `docker push estbndlt/moderation`
          # - create the pod in k8s directory
          #   - command: `kubectl apply -f moderation-depl.yaml`
          # - run the command to rollout deployment in k8s directory
          #   - command: `kubectl rollout restart deployment moderation-depl`
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP
  # `type: ClusterIP` is the default and is not needed
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
