blog/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx
  rules:
    # kubectl apply and add the following to /etc/hosts:
    # 127.0.0.1 posts.com
    - host: posts.com
      http:
        paths:
          - path: /posts
            pathType: ImplementationSpecific
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
